--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,10 @@ jobs:
         run: npm ci
         env:
           CLOUDSMITH_TOKEN: ${{ secrets.CLOUDSMITH_TOKEN }}
+      - name: Install Playwright browsers
+        run: npx playwright install chromium
       - name: Run Playwright tests
-        run: npx playwright install chromium\nnpm run test:playwright
+        run: npm run test:playwright
 
       - name: Level CI Accessibility Analysis
         uses: levelaccess/level-ci@dev
