--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@level-ci/a11y-playwright": "^0.1.1-preview-20251001162024",
     "@level-ci/cli": "^0.1.8-alpha.27",
+    "@level-ci/ngrok": "^0.1.4-alpha.27",
     "@playwright/test": "^1.42.1",
     "@types/node": "^24.5.2",
     "express": "^5.1.0",
