--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@level-ci:registry=https://npm.levelaccess.net/level-ci/
-//npm.levelaccess.net/level-ci/:_authToken=${CLOUDSMITH_TOKEN}
+@level-ci:registry=https://npm.levelaccess.net/level-ci-internal/
+//npm.levelaccess.net/level-ci-internal/:_authToken=${CLOUDSMITH_TOKEN}
