--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "devDependencies": {
     "@level-ci/a11y-playwright": "^0.1.1",
-    "@level-ci/cli": "^0.1.8",
-    "@level-ci/ngrok": "^0.1.4",
+    "@level-ci/cli": "^0.1.11",
+    "@level-ci/localtunnel": "^0.1.7",
+    "@level-ci/ngrok": "^0.1.7",
     "@playwright/test": "^1.42.1",
     "@types/node": "^24.5.2",
     "express": "^5.1.0",
